# ice-colder

./: .gitignore  CLAUDE.md  CONSISTENCY_REVIEW.md  Dockerfile  MQTT_broadcaster_demon.py  PLAN.md  README.md  config.json  docker-compose.debug.yml  docker-compose.yml  hello.py  main.py  pyproject.toml  requirements.txt  ruff.toml
ChatGPT_03mini_fsm_vmc/: config.json  config_model.py  config_test.py  event_store.py  main.py  state_model.py  tkinter_ui.py  virtual_payment_fsm.py
Gemini_Machine_Code/: config.txt  utils.py  vending_machine.py
app/: main.py
config/: config_model.py  config_test.py  state_model.py
controller/: event_store.py  message_manager.py  payment_device_baseclass_fsm.py  vmc.py  vmc_core.py  vmc_physical.py
docker/: .gitignore  docker-compose.prod.yml  docker-compose.yml
hardware/: button_panel.py  camera_monitor.py  dispensing_fsm.py  ice_maker.py  mdb_interface.py  mdb_payment_fsm.py  tkinter_ui.py
services/: MQTT_broadcaster_daemon.py  async_payment_fsm.py  config_store.py  display_controller.py  fsm_control.py  fsm_integration.py  health_monitor.py  inventory_manager.py  mqtt_client.py  mqtt_messages.py  notifier.py  payment_gateway_manager.py  virtual_payment_fsm.py
simulators/: __main__.py  base.py  ice_maker.py  mdb_gateway.py  vending_machine.py
tests/: test_config_model.py  test_display_controller.py  test_health_monitor.py  test_integration_e2e.py  test_inventory_manager.py  test_migrate_config__perf_test_0.py  test_migrate_config__perf_test_1.py  test_migrate_config__unit_test_0.py  test_migrate_config__unit_test_1.py  (+7 more)
(+36 files in other folders)
